<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/btnBack"
            style="@style/backButton"
            android:contentDescription="@string/back" />

        <TextView
            style="@style/editTextTitle"
            android:text="@string/aboutProject"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/about1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:adjustViewBounds="true"
            android:src="@drawable/about" />

        <TextView
            style="@style/editTextTitle"
            android:text="@string/aboutApp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/about2"
            android:textColor="@color/white"
            android:paddingBottom="10dp"
            android:textSize="16sp" />

        <TextView
            style="@style/editTextTitle"
            android:text="@string/about3Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/about3"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
